javaDSL/src/test/resources/typeSystemTestModels/valid/expressions/BooleanAndOrValid.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.expressions;

public class BooleanAndOrValid {
  boolean a = true && false;
  boolean b = true || false;
}
