javaDSL/src/test/resources/typeSystemTestModels/invalid/expressions/Util.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.expressions;

public class Util {
  public static <K, V> boolean compare(K k, V v) {
    return true;
  }
}
